addhog and monitorning system
