# packages/api/src/buildApp/router.ts
@@ -30,6 +30,7 @@ import tenantsController from "../controllers/tenantsController";
 import billingController from "../controllers/billingController";
 import adminPanelController from "../controllers/adminPanelController";
 import adhocListsController from "../controllers/adhocListsController";
+import engagementController from "../controllers/engagementController";
 import userPropertiesController from "../controllers/userPropertiesController";
 import userPropertyIndexController from "../controllers/userPropertyIndexController";
 import usersController from "../controllers/usersController";
@@ -147,6 +148,7 @@ export default async function router(
         f.register(billingController, { prefix: "/billing" }),
         f.register(adminPanelController, { prefix: "/panel" }),
         f.register(adhocListsController, { prefix: "/adhoc-lists" }),
+        f.register(engagementController, { prefix: "/engagement" }),
       ]);
     },
     { prefix: "/api/admin" },
